Resolved layout issue in the footer newsletter wrapper

--- a/main.css
+++ b/main.css
@@ -512,10 +512,6 @@ header {
   justify-content: space-between;
 }
 
-.footer__newsletter-wrapper {
-  padding-inline: 0;
-}
-
 .footer__item {
   margin-bottom: 1.5em;
 }
@@ -993,7 +989,11 @@ header {
   .footer__newsletter-wrapper {
     display: flex;
     flex-direction: column;
-    padding: 2em 0;
+    padding: 2em;
+  }
+
+  .contact__newsletter-wrapper {
+    padding: 0;
   }
 
   .footer__form {
